2008-09-07  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* process.c (Fsystem_process_attributes): Doc fix.

2008-09-07  Chong Yidong  <cyd@stupidchicken.com>

	* callproc.c (Fcall_process): Canonicalize current directory name.

	* xdisp.c (move_it_to): When moving by vpos, ensure that the
	iterator advances to the next line if the current line ends in a
	continued tab.

2008-09-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* nsfont.m (nsfont_draw): Fix the references to missing gidx data
	member to point to cmp_from.

	* xdisp.c: Doc fix for references to gidx data member.

2008-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (Fbuffer_swap_text): Reset window->point markers.

2008-09-06  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* process.c (Fsystem_process_attributes): Doc fix.

2008-09-06  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (Ftop_level): Doc fix.

2008-09-06  Eli Zaretskii  <eliz@gnu.org>

	* xmenu.c (xmenu_show) [!HAVE_X_WINDOWS]: If frame has a
	minibuffer, don't let lower part of menu invade the echo area.

	* msdos.c (IT_menu_display): Use STRING_CHAR_ADVANCE instead of a
	"char *q" to access menu text and advance through it.  Revert the
	change that displayed ">" instead of ASCII character 0x10.

2008-09-05  Eli Zaretskii  <eliz@gnu.org>

	* menu.c (single_menu_item) [!HAVE_BOXES]: Enable emulation of
	toggle boxes and radio buttons on MS-DOS as well.

2008-09-05  Kenichi Handa  <handa@m17n.org>

	* composite.c (autocmp_chars): Check lookback count.
	(composition_compute_stop_pos): Set cmp_it->lookback.
	(composition_reseat_it): Check lookback count.
	(struct position_record): New struct.
	(FORWARD_CHAR, BACKWARD_CHAR, CHAR_COMPOSABLE_P): New macros.
	(find_automatic_composition): New function.
	(composition_adjust_point): Use find_automatic_composition.

	* dispextern.h (struct composition_it): New member lookback.

2008-09-02  Chong Yidong  <cyd@stupidchicken.com>
